# vessel

./: .gitignore  Cargo.toml  README.md  project_dump.txt  vessel
.github/workflows/: rust.yml
builder/: Cargo.toml
builder/src/: lib.rs
cluster/: Cargo.toml
cluster/src/: lib.rs
filesystem/: Cargo.toml
filesystem/src/: catalog.rs  lib.rs
network/: Cargo.toml
network/src/: lib.rs
nova-ai/: Cargo.toml
nova-ai/src/: lib.rs
nova-cli/: Cargo.toml
nova-cli/src/: main.rs  termux.rs
nova-core/: Cargo.toml
nova-core/src/: bus.rs  filesystem.rs  lib.rs  main.rs  network.rs  security.rs
nova-runtime/: Cargo.toml
nova-runtime/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  manager.rs
runtime/src/drivers/: firecracker.rs  os_native.rs  wasm.rs
sdk/csharp/src/: NovaClient.cs
sdk/go/nova/: client.go
sdk/java/src/main/java/system/nova/client/: NovaClient.java
sdk/js/src/: client.ts
sdk/python/nova/: client.py
sdk/rust/src/: client.rs
security/: Cargo.toml
security/src/: lib.rs
