[package]
name = "nova-core"
version = "0.1.0"
edition = "2021"

[dependencies]
nova-runtime = { path = "../nova-runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
libc = "0.2"
zstd = "0.13"

# Explicitly configure all required nix features (fs, sched, mount, user, term)
nix = { version = "0.31", features = ["sched", "mount", "user", "fs", "term"] }
