[package]
name = "nova-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "1.0"

# Explicitly configure all required nix features natively
nix = { version = "0.31", features = ["sched", "mount", "user", "fs"] }
